--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
       "sparkline": "*"
     },
     "sources": {
-      "sparkline": "https://git.github.com/Neat-Lang/sparkline"
+      "sparkline": "https://github.com/Neat-Lang/sparkline"
     }
 }
