--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "type": "binary",
     "binary": "sparkline_cli",
     "main": "src/sparkline_cli.nt",
+    "compilerVersion": "0.1.1",
     "dependencies": {
       "sparkline": "*"
     },
